add createActor in actor
